test_dep = [hash_dep, ut_dep]

test('test_hash_concepts',
     executable('test_hash_concepts', 'hash_concepts.cpp',
                dependencies: test_dep))

test('test_hash_bytes',
     executable('test_hash_bytes', 'hash_bytes.cpp',
                dependencies: test_dep))

test('test_arithmetic_hash',
     executable('test_arithmetic_hash', 'arithmetic_hash.cpp',
                dependencies: test_dep))

test('test_string_hash',
     executable('test_string_hash', 'string_hash.cpp',
                dependencies: test_dep))

test('test_array_hash',
     executable('test_array_hash', 'array_hash.cpp',
                dependencies: test_dep))

test('test_tuple_hash',
     executable('test_tuple_hash', 'tuple_hash.cpp',
                dependencies: test_dep))

test('test_variant_hash',
     executable('test_variant_hash', 'variant_hash.cpp',
                dependencies: test_dep))

