test_dep = [hash_dep, ut_dep]

test('test_basic_types',
     executable('test_basic_types', 'basic_types.cpp',
                dependencies: test_dep))

test('test_string',
     executable('test_string', 'string.cpp',
                dependencies: test_dep))

test('test_array',
     executable('test_array', 'array.cpp',
                dependencies: test_dep))

test('test_tuple',
     executable('test_tuple', 'tuple.cpp',
                dependencies: test_dep))

test('test_variant',
     executable('test_variant', 'variant.cpp',
                dependencies: test_dep))

test('test_optional',
     executable('test_optional', 'optional.cpp',
                dependencies: test_dep))

